feat: create /g/:id/thumbnail route
rename /g/:id/:page to /g/:id/page/:page
