# swagger.yaml
@@ -128,7 +128,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         '5XX':
           $ref: '#/components/responses/ServerError'
-  /g/{id}/{page}:
+  /g/{id}/page/{page}:
     get:
       tags:
         - Posts
@@ -143,6 +143,28 @@ paths:
             type: integer
             minimum: 1
             maximum: 1
+      responses:
+        '200':
+          description: Returns page image
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+        '400':
+          $ref: '#/components/responses/WrongRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+  /g/{id}/thumbnail:
+    get:
+      tags:
+        - Posts
+      summary: Get thumbnail for post
+      operationId: getTumbnailForPost
+      parameters:
+        - $ref: '#/components/parameters/Post'
       responses:
         '200':
           description: Returns page image
